Deployed on my Slack Channnel with help of ngrok

--- a/credentials.yml
+++ b/credentials.yml
@@ -13,7 +13,7 @@ rest:
 #  page-access-token: "<your page access token>"
 
 slack:
- slack_token: "xoxb-xxxx-xxxx-xxxx"
+ slack_token: "xoxb-1255546440388-1273322109600-ABY7LYC0vAeK1iGT1LOqh8FG"
  # slack_channel: "djn-md"
 
 #socketio:
